# NFT-smart-contract

./: NFT smart contract.rs
code_sections/: assert.rs  bindgen.rs  cfg.rs  const_variable.rs  enums.rs  functions.rs  init.rs  mod.rs  mut_variable.rs  not_mut_variable.rs  ownership.rs  panic.rs  paths.rs  payable.rs  recoverable errors.rs  references and borrowing.rs  should_panic.rs  structs.rs  tests.rs  use word.rs
presentation-formatter/: Cargo.toml  README.md  input.csv  input.json  output.md
presentation-formatter/src/: csv_format.rs  formatter.rs  hackmd_formater.rs  json_format.rs  main.rs
