[package]
name = "presentation-formater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= { version = "1" , features =["derive"]}
serde_json = "1.0.78"
regex = "1.5.4"
csv = "1.1"
clap = {version = "3.0.14", features =["derive"]}